--- a/env.json.sample
+++ b/env.json.sample
@@ -2,6 +2,8 @@
   "environment": {
     "SES_ACCESS_KEY_ID": "",
     "SES_SECRET_ACCESS_KEY": "",
-    "SES_REGION": "us-east-1"
+    "SES_REGION": "us-east-1",
+    "FROM_ADDR": "",
+    "TO_ADDR": ""
   }
 }
